# swagger-ui-py

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: lint-and-pytest.yml  release.yml
swagger_ui/: core.py
swagger_ui/handlers/: falcon.py
swagger_ui/static/: swagger-editor.css
swagger_ui/static/umd/: apidom.worker.js  editor.worker.js  swagger-editor.js.LICENSE.txt
swagger_ui/templates/: editor.html
test/: aiohttp_test.py  bottle_test.py  chalice_test.py  common.py  falcon_test.py  flask_test.py  quart_test.py  sanic_test.py  starlette_test.py  tornado_test.py
tools/: update.py
