[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swagger-ui-py-x"
version = "26.02.18"
description = "Swagger UI for Python web framework, such as Tornado, Flask, Quart, Sanic and Falcon."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "b3n4kh", email = "b@akhras.at"},
    {name = "PWZER", email = "pwzergo@gmail.com"}
]
urls = { "Homepage" = "https://github.com/b3n4kh/swagger-ui-py" }

dependencies = [
    "jinja2>=2.0",
    "packaging>=20.0",
    "PyYaml>=5.0"
]

[project.optional-dependencies]
dev  = ["ruff", "isort"]
test = ["aiohttp", "djlint", "bottle", "chalice", "falcon", "flask", "pytest", "pytest-aiohttp", "quart", "requests", "sanic", "sanic-testing", "starlette", "tornado", "uvicorn", "webtest"]


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["swagger_ui*"]
namespaces = false

[tool.setuptools.package-data]
"swagger_ui" = ["static/*", "static/umd/*", "templates/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["E402"]
"examples/*" = ["E402"]
